--- a/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
@@ -1,5 +1,27 @@
 <h1>Documentos</h1>
 
+<!-- Filtros y búsqueda -->
+<div style="display: flex; align-items: center; gap: 150px;">
+  <div>
+    <label for="campoOrden" style="margin-right: 10px;">Selecciona una opción:</label>
+    <select id="campoOrden" [(ngModel)]="campoOrden" class="combo-box">
+      <option value="nombre">Nombre</option>
+      <option value="FechaSubida">Fecha de Subida</option>
+      <option value="HoraSubida">Hora de Subida</option>
+    </select>
+  </div>
+  <div>
+    <label for="orden" style="margin-right: 10px;">Seleccione la siguiente opción:</label>
+    <select id="orden" [(ngModel)]="orden" class="combo-box">
+      <option value="asc">De Primero al Último</option>
+      <option value="desc">De Último al Primero</option>
+    </select>
+  </div>
+  <button class="combo-box" (click)="filtrarDocumentos()">Buscar</button>
+</div>
+
+<div style="height: 30px"></div>
+
 <div class="botonesCrud-container">
   <button class="botonesCrud" (click)="abrirModalDocumentosCrear()">Crear Documento</button>
   <button class="botonesCrud" (click)="actualizarDocumento()">Actualizar Documento</button>
