Filtos de representantes
+Se han filtrado todos los representantes dependiendo de su campo

--- a/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
@@ -16,7 +16,7 @@
     <button routerLink="/principalPageUsers/Proveedores">Proveedores</button>
     <button routerLink="/principalPageUsers/Documentos">Documentos</button>
     <button routerLink="/principalPageUsers/Itos">Itos</button>
-    <button routerLink="/principalPageUsers/Representantes">Reprecentantes</button>
+    <button routerLink="/principalPageUsers/Representantes">Representantes</button>
 
   </aside>
 
