--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
@@ -16,7 +16,7 @@
     <button routerLink="/principalPage/Proveedores">Proveedores</button>
     <button routerLink="/principalPage/Documentos">Documentos</button>
     <button routerLink="/principalPage/Itos">Itos</button>
-    <button routerLink="/principalPage/Representantes">Reprecentantes</button>
+    <button routerLink="/principalPage/Representantes">Representantes</button>
 
     <div style="height: 20px;"></div>
 
