Actualizando alertas de proveedores
+fueron mejoradas las alertas que ve el usuario para una mejor interacción en el componente de proveedores

--- a/Cliente_web/Cliente_webFront/src/app/ajustes/ajustes.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/ajustes/ajustes.component.html
@@ -5,8 +5,13 @@
   </header>
 
   <div class="content">
-    <p>Este solo es otro print de prueba</p>
-    <h3>Al igual que este</h3>
+    <h1>Cambiar imagen de la pestaña principal</h1>
+
+    <label> Ingrese la nueva url de su imagen a elección: </label>
+    <input type="text">
+    <div style="height: 20px"></div>
+    <button style="margin-left: 100px" class="buttons">Guardar nueva imagen</button>
+
   </div>
 
   <footer class="footer">
