--- a/Cliente_web/Cliente_webFront/src/app/usuario-user/usuario-user.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/usuario-user/usuario-user.component.html
@@ -5,9 +5,24 @@
   </header>
 
   <div class="content">
-    <p>Este solo es otro print de prueba</p>
-    <h3>Al igual que este</h3>
-    <button routerLink="/login" class="buttons">Cerrar Sesión</button>
+    <h1>Cambio de Contraseña</h1>
+    <h2>¿Desea realizar el cambio de su contraseña?</h2>
+
+    <label style="margin-left: 30px"> Ingrese su nueva contraseña: </label>
+    <input type="text">
+
+    <div style="height: 20px"></div>
+
+    <label style="margin-left: 70px"> Ingresela nuevamente: </label>
+    <input type="text">
+
+    <div style="height: 20px"></div>
+
+    <button style="margin-left: 100px" class="buttons"> Guardar nueva contraseña </button>
+
+    <div style="height: 50px"></div>
+
+    <button style="margin-left: 800px" routerLink="/login" class="buttons">Cerrar Sesión</button>
   </div>
 
   <footer class="footer">
