--- a/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
@@ -54,7 +54,7 @@
     <td>{{ documento.hora_subida }}</td>
     <td>{{ documento.tipo_documento }}</td>
     <td>{{ documento.contrato }}</td>
-    <td>[Futuro botón de acceso]</td>
+    <td> <button class="botonesCrud">Acceso al documento</button> </td>
   </tr>
   </tbody>
 </table>
