Paginación de Componentes
+Todos los componentes del usuario y administrador compartidos tienen su respectiva paginación para sus métodos get y para sus filtros

--- a/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
@@ -58,11 +58,11 @@
   </tbody>
 </table>
 
-<div style="height: 20px"></div>
+<div style="height: 50px"></div>
 
 <div style="display: flex; justify-content: space-between; width: 100%;">
-  <button class="buttons" style="flex: 1; margin-right: 10px;">Página Anterior</button>
-  <button class="buttons" style="flex: 1;">Página Siguiente</button>
+  <button class="buttons" style="flex: 1; margin-right: 10px;"(click)="gestionPaginas('anterior')">Página Anterior</button>
+  <button class="buttons" style="flex: 1;" (click)="gestionPaginas('siguiente')">Página Siguiente</button>
 </div>
 
 
