--- a/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
@@ -69,8 +69,8 @@
 
 <!-- Paginación -->
 <div style="display: flex; justify-content: space-between; width: 100%;">
-  <button class="buttons" style="flex: 1; margin-right: 10px;">Página Anterior</button>
-  <button class="buttons" style="flex: 1;">Página Siguiente</button>
+  <button class="buttons" style="flex: 1; margin-right: 10px; " (click)="gestionPaginas('anterior')">Página Anterior</button>
+  <button class="buttons" style="flex: 1;" (click)="gestionPaginas('siguiente')">Página Siguiente</button>
 </div>
 
 
