--- a/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
@@ -59,6 +59,13 @@
   </tbody>
 </table>
 
+<div style="height: 50px"></div>
+
+<!-- Paginación -->
+<div style="display: flex; justify-content: space-between; width: 100%;">
+  <button class="buttons" style="flex: 1; margin-right: 10px; " (click)="gestionPaginas('anterior')">Página Anterior</button>
+  <button class="buttons" style="flex: 1;" (click)="gestionPaginas('siguiente')">Página Siguiente</button>
+</div>
 
 <!-- ==================================================== MODALES ======================================================-->
 
